--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,34 +18,49 @@ body, html {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+  color: wheat;
+  background-color: #555;
 }
 
 .chat-messages {
   overflow: auto;
   height: 100%;
-  padding-right: 0px;
+  padding: 0px;
+  background-color: #999;
 }
 
 .chat-message {
   min-height: 30px;
-  background-color: #eee;
+  background-color: #444;
   padding-left: 20px;
   padding-bottom: 5px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #555;
+  margin: 3px;
+  border-radius: 13px;
 }
 
 .message-author {
   font-size: 14px;
   font-style: italic;
+  color: #ccc;
 }
 
 .message-content {
   font-size: 16px;
+  color: #eee;
 }
 
 .users-list {
   height: 100%;
-  background-color: red;
+  background-color: #444;
+  color: #eee;
+  padding: 0px;
+}
+
+.chat-user {
+  border-bottom: 1px solid #777;
+  background-color: #555;
+  padding: 3px;
 }
 
 .chat-content-wrapper {
